# Weather-Prediction-App-AUS

./: .dockerignore  .gitignore  Dockerfile  README.md  data_cleaning.py  download_dataset.py  eda.py  modeling.py  pyproject.toml
app/: main.py
app/api/: dependencies.py  routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: prediction.py  preprocessor.py
assets/: best_model.joblib  best_model_meta.txt  key_insights.txt  model_comparison_report.md  preprocessor.joblib  summary_statistics.csv
test/: test_request.py
