[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kagglehub>=1.0.0",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "pydantic-settings>=2.13.1",
    "joblib>=1.5.3",
]
